# stonks.ai

./: .cursorrules  .gitignore  README.md  config.json  fetch_data.py  main.py  pyproject.toml
src/backtesting/: engine.py
src/notebooks/: pairs_search.ipynb
src/strategies/: base.py  mean_reversion.py  momentum.py  xgboost_strategy.py
