[project]
name = "stonks-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "xgboost>=2.1.0",
    "scikit-learn>=1.5.0",
    "statsmodels>=0.14.6",
    "seaborn>=0.13.2",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]
